// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsInstallations should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <div
        class="el-flex-container el-flex-wrap"
      >
        <mock-styled.div>
          <h2
            class="el-text-base el-subtitle"
          >
            Installations Per Day
          </h2>
        </mock-styled.div>
        <mock-styled.div>
          <h2
            class="el-text-base el-subtitle"
          >
            Installations Per App
          </h2>
        </mock-styled.div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r0:"
      >
        <button
          aria-controls=":r0:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Installations
    </h1>
    <div
      class="el-flex-container el-flex-wrap"
    >
      <mock-styled.div>
        <h2
          class="el-text-base el-subtitle"
        >
          Installations Per Day
        </h2>
      </mock-styled.div>
      <mock-styled.div>
        <h2
          class="el-text-base el-subtitle"
        >
          Installations Per App
        </h2>
      </mock-styled.div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r0:"
    >
      <button
        aria-controls=":r0:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AnalyticsInstallations should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Installations
      </h1>
      <div
        class="el-flex-container el-flex-wrap"
      >
        <mock-styled.div>
          <h2
            class="el-text-base el-subtitle"
          >
            Installations Per Day
          </h2>
        </mock-styled.div>
        <mock-styled.div>
          <h2
            class="el-text-base el-subtitle"
          >
            Installations Per App
          </h2>
        </mock-styled.div>
      </div>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r2:"
      >
        <button
          aria-controls=":r2:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Installations
    </h1>
    <div
      class="el-flex-container el-flex-wrap"
    >
      <mock-styled.div>
        <h2
          class="el-text-base el-subtitle"
        >
          Installations Per Day
        </h2>
      </mock-styled.div>
      <mock-styled.div>
        <h2
          class="el-text-base el-subtitle"
        >
          Installations Per App
        </h2>
      </mock-styled.div>
    </div>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r2:"
    >
      <button
        aria-controls=":r2:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
